--- a/ConnectSpotify/app/src/main/res/values/strings.xml
+++ b/ConnectSpotify/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ConnectSpotify</string>
+    <string name="app_name">DJ Käntekst</string>
+    <string name="title_home">Context</string>
+    <string name="title_dashboard">Presets</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
